--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ button:hover {
 
 #resume p {
     font-size: 18px;
+    margin: 0 11px;
     font-weight: 600;
     transition: transform 0.5s ease-in-out;
     transform: scale(1);
